test/libyul/yulSyntaxTests/for_loop_condition_fail_ewasm.yul
{
    let x
    for {} x {} {}
}
// ====
// dialect: ewasm
// ----
// TypeError 1733: (23-24): Expected a value of boolean type "i32" but got "i64"
